find_package(KDE4 REQUIRED)
include(KDE4Defaults)

install(DIRECTORY "Abstract - Air" DESTINATION ${WALLPAPER_INSTALL_DIR}/KDE)
install(DIRECTORY "Abstract - Ariya" DESTINATION ${WALLPAPER_INSTALL_DIR}/KDE)
install(DIRECTORY "Abstract - Blue Quadrant" DESTINATION ${WALLPAPER_INSTALL_DIR}/Netrunner)
install(DIRECTORY "Abstract - Stripes" DESTINATION ${WALLPAPER_INSTALL_DIR}/KDE)
install(DIRECTORY Albedo DESTINATION ${WALLPAPER_INSTALL_DIR}/Netrunner)
install(DIRECTORY Blacklight DESTINATION ${WALLPAPER_INSTALL_DIR}/Netrunner)
install(DIRECTORY Chromatic DESTINATION ${WALLPAPER_INSTALL_DIR}/Netrunner)
install(DIRECTORY "Chromatic - Alternative" DESTINATION ${WALLPAPER_INSTALL_DIR}/Netrunner)
install(DIRECTORY "Dryland - First Edition - The Arrival" DESTINATION ${WALLPAPER_INSTALL_DIR}/Netrunner)
install(DIRECTORY "Dryland - Second Edition - The Gate" DESTINATION ${WALLPAPER_INSTALL_DIR}/Netrunner)
install(DIRECTORY "Dryland - Third Edition - The Map" DESTINATION ${WALLPAPER_INSTALL_DIR}/Netrunner)
install(DIRECTORY "Dryland - Third Edition - The Path" DESTINATION ${WALLPAPER_INSTALL_DIR}/Netrunner)
install(DIRECTORY "Dryland - Third Edition - The Tower" DESTINATION ${WALLPAPER_INSTALL_DIR}/Netrunner)
install(DIRECTORY "KDE - Aghi" DESTINATION ${WALLPAPER_INSTALL_DIR}/KDE)
install(DIRECTORY "KDE - Castilla_Sky" DESTINATION ${WALLPAPER_INSTALL_DIR}/KDE)
install(DIRECTORY "KDE - Colorado_Farm" DESTINATION ${WALLPAPER_INSTALL_DIR}/KDE)
install(DIRECTORY "KDE - Evening" DESTINATION ${WALLPAPER_INSTALL_DIR}/KDE)
install(DIRECTORY "KDE - Field" DESTINATION ${WALLPAPER_INSTALL_DIR}/KDE)
install(DIRECTORY "KDE - Grass" DESTINATION ${WALLPAPER_INSTALL_DIR}/KDE)
install(DIRECTORY "KDE - Hanami" DESTINATION ${WALLPAPER_INSTALL_DIR}/KDE)
install(DIRECTORY "KDE-Look - Canyon Descent 2" DESTINATION ${WALLPAPER_INSTALL_DIR}/Netrunner)
install(DIRECTORY "KDE-Look - Chandra" DESTINATION ${WALLPAPER_INSTALL_DIR}/Netrunner)
install(DIRECTORY "KDE-Look - Dead and Alive" DESTINATION ${WALLPAPER_INSTALL_DIR}/Netrunner)
install(DIRECTORY "KDE-Look - Fusine" DESTINATION ${WALLPAPER_INSTALL_DIR}/Netrunner)
install(DIRECTORY "KDE-Look - Quiet morning at Moncenisio Lake" DESTINATION ${WALLPAPER_INSTALL_DIR}/Netrunner)
install(DIRECTORY "KDE-Look - Rekonar 3D" DESTINATION ${WALLPAPER_INSTALL_DIR}/Netrunner)
install(DIRECTORY "KDE-Look - Sahara III" DESTINATION ${WALLPAPER_INSTALL_DIR}/Netrunner)
install(DIRECTORY "KDE-Look - Stormgreen" DESTINATION ${WALLPAPER_INSTALL_DIR}/Netrunner)
install(DIRECTORY "Netrunner - Journey to Heaven" DESTINATION ${WALLPAPER_INSTALL_DIR}/Netrunner)
install(DIRECTORY "Netrunner - Lake At Night" DESTINATION ${WALLPAPER_INSTALL_DIR}/Netrunner)
install(DIRECTORY "Netrunner - Moss" DESTINATION ${WALLPAPER_INSTALL_DIR}/Netrunner)
install(DIRECTORY "Netrunner - The Way God Made Me" DESTINATION ${WALLPAPER_INSTALL_DIR}/Netrunner)
